# big-sort

./: Makefile  create_cgroup.sh  dummy  dummy.cpp  dummy_mmap  dummy_mmap.cpp  iolib.h  main  main.cpp  read_all  read_all.cpp  readme.md  run_inside_cgroup.sh  sample.desc  sample.in  sample.out  strace.txt  test_14GB.txt  test_2GB.txt  test_gen  test_gen.cpp  test_generator.bash  отчёт.odt
stxxl/: CMakeLists.txt  main.cpp  run.sh  stxxl.conf
